# mario-cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CopyAssets.bat  MakeDemo.bat  README.md  main.cpp
assets/shaders/default/: fragment.glsl  vertex.glsl
engine/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  InstanceManager.cpp  InstanceManager.h  KeyboardListener.cpp  KeyboardListener.h  LevelEditorScene.cpp  LevelEditorScene.h  LevelScene.cpp  LevelScene.h  MouseListener.cpp  MouseListener.h  Scene.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h  Timer.cpp  Timer.h  Window.cpp  Window.h
script/: CopyAssets.py  MakeDemo.py  Util.py
